little css bugfix where `/dashboard/aboutme` profile image wasw ay too large

--- a/src/less/ui/forms.less
+++ b/src/less/ui/forms.less
@@ -326,23 +326,23 @@
 .mywheels-form .input-addon small {
     position: absolute;
     top: 0;
-    min-width: 11em;
+    min-width: 152px;
     height: 100%;
     text-align: right;
-    padding: 1em 0.5em 0 3em;
+    padding: 10px 5px 0 0;
     border: 1px solid rgb(189, 197, 199);
     border-radius: @border-raduis 0 0 @border-raduis;
     color: rgb(110, 119, 121);
     z-index: 1;
 }
 .mywheels-form .input-addon input[type="text"] {
-    padding-left: 9em !important;
+    padding-left: 160px !important;
 }
 // icons
 .mywheels-form .icon:before {
     position: absolute;
-    top: 0.3em;
-    left: 0.3em;
+    top: 0.2em;
+    left: 0.2em;
     width: 1em;
     margin: 0.2em;
     color: #bdc5c7;
